Fixing some mobile spacing issues

--- a/src/components/NavigationMenu.css
+++ b/src/components/NavigationMenu.css
@@ -22,9 +22,12 @@
 
 .expand-button {
     background: none;
-    font-size: 30px; /* Increase font size */
-    line-height: 55px; /* Adjust line height to move text up */
-    vertical-align: middle; /* Ensure text is vertically aligned */
+    font-size: 30px;
+    /* Increase font size */
+    line-height: 55px;
+    /* Adjust line height to move text up */
+    vertical-align: middle;
+    /* Ensure text is vertically aligned */
     color: #007aff;
     box-shadow: none;
     border-radius: 20px;
@@ -120,15 +123,18 @@
         width: 100%;
         height: 60px;
         box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+
+        /* Adding this for mobile users who likely have some kind of pill for gesture navigation */
+        padding-bottom: 20px;
+        padding-left: 0;
     }
 
     .navigation-menu {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        /* Center the menu */
         width: 100%;
-    }    
+    }
 
     .navbar.collapsed .navigation-menu-item {
         margin: 0px 10px;
